[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apiforge"
version = "0.1.0"
description = "Generate CURL commands and Postman collections from API scenarios"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Ali Bahrampour" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

keywords = [
    "api",
    "curl",
    "postman",
    "testing",
    "automation"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]