[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apiforge"
version = "0.1.0"
description = "API Testing Platform for generating, executing and analyzing API test scenarios."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Your Name"}
]

license = {text = "MIT"}

keywords = [
    "api",
    "testing",
    "curl",
    "postman",
    "automation",
    "qa"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "flask>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/your-username/apiforge"
Documentation = "https://github.com/your-username/apiforge/wiki"
Issues = "https://github.com/your-username/apiforge/issues"